--- a/style.css
+++ b/style.css
@@ -31,40 +31,7 @@ body {
   background-color: #c0392b;
 }
 
-/* Style the heart shape */
-#heart {
-  width: 200px;
-  height: 200px;
-  position: absolute;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: red;
-  border-radius: 50%;
-  z-index: -1; /* Move heart to the background */
-  animation: pulse 1s infinite alternate;
-}
-
-#heart::before,
-#heart::after {
-  content: '';
-  position: absolute;
-  width: 200px;
-  height: 200px;
-  background-color: red;
-  border-radius: 50%;
-}
-
-#heart::before {
-  top: -100px;
-  left: 0;
-}
-
-#heart::after {
-  top: 0;
-  left: 100px;
-}
-
+/* Message Style */
 #message {
   position: absolute;
   top: 60%;
@@ -81,15 +48,6 @@ body {
   visibility: visible; /* Show the message */
 }
 
-@keyframes pulse {
-  0% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(1.2);
-  }
-}
-
 #confetti {
   position: absolute;
   top: 0;
@@ -97,4 +55,13 @@ body {
   width: 100%;
   height: 100%;
   pointer-events: none;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  100% {
+    transform: scale(1.2);
+  }
 }
